scss/style.scss
:root {
  scroll-behavior: smooth;

  --color-bg: #fff;
  --text-color-white: #fcfcfc;
  --dev-color: #f2f2f2;

  --text-color: #0f0f0f;
  --action-color: #fe7624;
  --action-color-2: #205eff;
  --action-color-3: #5d21d1;
}

::-webkit-scrollbar {
  width: 10px;
  height: 10px;

  &-track {
    background: var(--color-bg)
  }

  &-thumb {
    background: var(--text-color);
  }
}

@font-face {
  font-family: 'Organik';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url('../fonts/Organik.otf') format('otf');
  unicode-range: U+0000-00FF;
}

body {
  margin: 0;
  background-color: var(--color-bg);
}

a {
  color: inherit;
  text-decoration: none;
  font-family: 'Montserrat', sans-serif;
  font-weight: 600;
  font-size: 29px;
}

h1 {
  font-family: 'Montserrat', sans-serif;
  font-weight: 800;
  font-size: 82px;
}

h2 {
  font-family: 'Montserrat', sans-serif;
  font-weight: 700;
  font-size: 75px;

  & .small {
    font-family: 'Montserrat', sans-serif;
    font-weight: 700;
    font-size: 46px;
  }
}

h3 {
  text-transform: uppercase;
  font-family: 'Poppins', sans-serif;
  font-weight: 600;
  font-size: 34px;
}

p {
  font-family: 'Poppins', sans-serif;
  font-weight: 500;
  font-size: 29px;

  &.number_circle {
    font-family: 'Organik', fantasy;
    font-weight: 400;
    font-size: 103px;
  }
}


.header {
  top: 0;
  width: 100%;
  position: fixed;
  display: flex;
  justify-content: space-between;
  align-items: center;

  box-shadow: 0 1px 10px 0 #000;
  backdrop-filter: blur(15px);

  &--container {
    margin: 0 auto;
    width: clamp(320px, 80%, 1240px);
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 10px;
  }
}

a.logo {
  display: flex;
  align-items: center;
  font-family: 'Righteous', sans-serif;
  font-weight: 400;
  font-size: 40px;
  padding: 20px 0;
  gap: 10px;
}

.nav {
  display: flex;

  .nav--link {
    padding: 20px 10px;
  }
}

.main {
  display: grid;
  margin: 120px auto 0;
  width: clamp(320px, 80%, 1240px);
  gap: 100px;
}

.landing {
  display: flex;
  gap: 20px;

  .right {
    margin: auto 0;
  }
}

.about_us {
  text-align: center;

  .illustrations {
    display: flex;
    justify-content: space-around;
    width: 100%;
  }
}

.perks {
  text-align: center;

  .top {
    .card:nth-child(1) p {
      &:before {
        background: var(--action-color);
        transform: translate(-47%, -50%);
      }

      &:after {
        color: var(--action-color-3);
        transform: translate(-53%, -50%);
      }
    }

    .card:nth-child(2) p {
      &:before {
        background: var(--text-color);
        transform: translate(-53%, -53%);
      }

      &:after {
        color: var(--action-color);
        transform: translate(-47%, -47%);
      }
    }

    .card:nth-child(3) p {
      &:before {
        background: var(--action-color-2);
        transform: translate(-53%, -47%);
      }

      &:after {
        color: var(--text-color);
        transform: translate(-47%, -53%);
      }
    }
  }

  .bottom {
    .card:nth-child(1) p {
      &:before {
        background: var(--text-color);
        transform: translate(-47%, -47%);
      }

      &:after {
        color: var(--action-color);
        transform: translate(-53%, -53%);
      }
    }

    .card:nth-child(2) p {
      &:before {
        background: var(--action-color);
        transform: translate(-53%, -47%);
      }

      &:after {
        color: var(--action-color-3);
        transform: translate(-50%, -53%);
      }
    }

    .card:nth-child(3) p {
      &:before {
        background: var(--action-color-2);
        transform: translate(-56%, -47%);
      }

      &:after {
        color: var(--action-color-3);
        transform: translate(-53%, -53%);
      }
    }

    .card:nth-child(4) p {
      &:before {
        background: var(--action-color);
        transform: translate(-47%, -53%);
      }

      &:after {
        color: var(--action-color-3);
        transform: translate(-53%, -47%);
      }
    }
  }

  .top, .bottom {
    display: flex;

    & > * {
      width: 100%;
    }
  }

  p.number_circle {
    color: var(--text-color-white);
    position: relative;

    &:before, &:after {
      content: '';
      position: absolute;
      left: 50%;
      top: 50%;
      transform: translate(-50%, -50%);
      z-index: -1;

      border-radius: 50%;

      height: 210px;
      width: 210px;
    }

    &:after {
      border: 5px solid;
    }
  }
}

.supply_chain {
  .step {
    width: 60%;
  }
}

.contact-us {
  text-align: center;

  .contact {
    display: flex;
    gap: 20px;
  }

  form {
    display: flex;
    flex-direction: column;
    grid-gap: 20px;

    .form-identity {
      display: flex;
      grid-gap: 26px;

      input#name {
        width: 33%;
      }

      input#mail {
        width: 100%;
      }
    }
  }

  input, textarea {
    font-size: 24px;
    padding: 10px 20px;
    border: 3px solid var(--text-color);
    border-radius: 12px;

    &::placeholder {
      font-weight: bold;
      font-size: 24px;
      opacity: 0.25;
    }

    &[type=submit] {
      width: 25%;
      border: 3px solid transparent;
      font-family: 'Poppins', sans-serif;
      background-color: var(--action-color);
      box-shadow: 5px 5px 0 0 var(--text-color);
      padding: 10px 40px;
    }
  }

  textarea {
    height: 150px;
    resize: none;
  }
}

footer {
  width: 100%;
  background-color: var(--dev-color);
}

